@@ -1,3 +1,8 @@
+2008-03-16 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCcse.c (algebraicOpts): fixed bug 1579949
+	* support/regression/tests/bug1579949.c: new, added
+
 2008-03-14 Paul Stoffregen <paul AT pjrc.com>
 
 	* device/lib/printf_fast.c: fixed bug 1255403
